# vahaan-watch

./: .dockerignore  .gitignore  Dockerfile.workstation  PLAN.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-06.jsonl  tmux-hook-2026-04-07.jsonl  tmux-hook-2026-04-08.jsonl  turns-2026-04-06.jsonl  turns-2026-04-07.jsonl  turns-2026-04-08.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
apps/api/: .env.example  package.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/tablet/: next.config.mjs  package.json
apps/web/: next.config.mjs  package-lock.json
apps/workstation-agent/: .env.example
apps/ws-server/: .env.example  local.env  package.json  server.js
deploy/: create-vm.sh  setup-vm.sh
js-demo/: anpr_demo.mjs  anpr_wrapper.mjs  package-lock.json  package.json
sdk_samples/samples/C/: CMakeLists.txt
sdk_samples/samples/C++/: CMakeLists.txt
sdk_samples/samples/C++/01_minimal/: 01_minimal.cpp  CMakeLists.txt
sdk_samples/samples/C++/02_basic/: 02_basic.cpp  CMakeLists.txt
sdk_samples/samples/C++/03_result_details/: 03_result_details.cpp  CMakeLists.txt
sdk_samples/samples/C++/04_multi_stream/: 04_multi_stream.cpp  CMakeLists.txt
sdk_samples/samples/C++/05_cloud/: 05_cloud.cpp  CMakeLists.txt
sdk_samples/samples/C++/06_custom_stream/: 06_custom_stream.cpp  CMakeLists.txt  custom_stream.h
sdk_samples/samples/C++/07_multistage_anpr/: 07_multistage_anpr.cpp  CMakeLists.txt
sdk_samples/samples/C++/common/: utils.hpp
sdk_samples/samples/C++/test_debug/: CMakeLists.txt  test_debug.cpp
sdk_samples/samples/C++/vs2019/: carmen_video_sdk_cpp_samples.sln  cpp_sample_01_minimal.vcxproj  cpp_sample_02_basic.vcxproj  cpp_sample_03_result_details.vcxproj  cpp_sample_04_multi_stream.vcxproj  cpp_sample_05_cloud.vcxproj  cpp_sample_06_custom_stream.vcxproj  cpp_sample_07_multistage_anpr.vcxproj
sdk_samples/samples/C/01_minimal/: 01_minimal.c  CMakeLists.txt
sdk_samples/samples/C/02_basic/: 02_basic.c  CMakeLists.txt
sdk_samples/samples/C/03_result_details/: 03_result_details.c  CMakeLists.txt
sdk_samples/samples/C/04_multi_stream/: 04_multi_stream.c  CMakeLists.txt
sdk_samples/samples/C/05_cloud/: 05_cloud.c  CMakeLists.txt
sdk_samples/samples/C/07_multistage_anpr/: 07_multistage_anpr.c  CMakeLists.txt
sdk_samples/samples/C/common/: utils.h
sdk_samples/samples/C/vs2019/: c_sample_01_minimal.vcxproj  c_sample_02_basic.vcxproj  c_sample_03_result_details.vcxproj  c_sample_04_multi_stream.vcxproj  c_sample_05_cloud.vcxproj  c_sample_07_multistage_anpr.vcxproj  carmen_video_sdk_c_samples.sln
(+317 files in other folders)
